# flask-sqlalchemy-unchained

./: .gitignore  CHANGELOG.md  README.md  flask_sqlalchemy_unchained.py  pyproject.toml  setup.cfg  setup.py  tox.ini
flask_sqlalchemy_unchained/: __init__.py
tests/: app.py  conftest.py  test_app.py
