[project]
name = "flask-sqlalchemy-unchained"
version = "0.8.1"
description = "Integrates SQLAlchemy Unchained with Flask"
authors = [{ name = "Brian Cappello", email = "briancappello@gmail.com" }]
requires-python = ">=3.10,<4"
readme = "README.md"
license = "MIT"
dependencies = [
    "flask-sqlalchemy>=3.0.0,<4",
    "sqlalchemy-unchained>=0.14.0,<0.15",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0,<9",
    "black>=24.1.1,<25",
    "tox>=4.12.1,<5",
    "mypy>=1.8.0,<2",
    "sqlalchemy2-stubs>=0.0.2a38,<0.0.3",
    "isort>=5.13.2,<6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.mypy.overrides]]
module = [
    "sqlalchemy.ext.*",
]
ignore_missing_imports = true

[tool.black]
line-length = 90
target-version = ['py310']
preview = true

[tool.isort]
profile = "black"
include_trailing_comma = true
lines_between_types = 1
lines_after_imports = 2
multi_line_output = 3
sections = "FUTURE,STDLIB,THIRDPARTY,FLASK,SQLALCHEMY,FIRSTPARTY,LOCALFOLDER"
known_flask = [
    "flask",
    "flask_sqlalchemy",
]
known_sqlalchemy = [
    "sqlalchemy",
]
known_first_party = [
    "sqlalchemy_unchained",
]
